Broken links fix

--- a/load/header.html
+++ b/load/header.html
@@ -4,9 +4,9 @@
   </div>
   <nav>
     <ul>
-      <li><a href="/" id='a_index'>Home</a></li>
-      <li><a href="/projects" id='a_projects'>Projects</a></li>
-      <li><a href="/about.html" id='a_about'>About</a></li>
+      <li><a href="../" id='a_index'>Home</a></li>
+      <li><a href="../projects" id='a_projects'>Projects</a></li>
+      <li><a href="../about.html" id='a_about'>About</a></li>
     </ul>
   </nav>
 </div>
