--- a/projects/index.html
+++ b/projects/index.html
@@ -38,7 +38,7 @@
           <p>On demand technician troubleshooting services.</p>
         </div>
         <div class='box2 grayAnim' onclick="location.href=root+'projects/2048.html'">
-          <img src="/load/img/2048.png"/>
+          <img src="/load/img/2048.PNG"/ >
           <h3>2048 A.I. Algorithm</h3>
           <p>On demand technician troubleshooting services.</p>
         </div>
