--- a/projects/2048.html
+++ b/projects/2048.html
@@ -56,7 +56,7 @@
         </div>
         <div id='project_side' class='grayAnim'>
           <h3>2048 Game App</h2>
-          <img src='/load/img/2048.png'>
+          <img src='/load/img/2048.PNG'>
           <ul>
             <li>Java</li>
             <li>Object Oriented Programming</li>
