--- a/projects/battleships.html
+++ b/projects/battleships.html
@@ -43,7 +43,7 @@
         </div>
         <div id='project_side' class='grayAnim'>
           <h3>Battleships App</h2>
-          <img src="/load/img/battleships.png"/>
+          <img src="/load/img/battleships.PNG"/>
           <ul>
             <li>Java</li>
             <li>Object Oriented Programming</li>
