--- a/projects/dungeon.html
+++ b/projects/dungeon.html
@@ -43,7 +43,7 @@
         </div>
         <div id='project_side' class='grayAnim'>
           <h3>Card Maze App</h3>
-          <img src="/load/img/dungeon.png"/>
+          <img src="/load/img/dungeon.PNG"/>
           <ul>
             <li>Java</li>
             <li>Object Oriented Programming</li>
