--- a/projects/index.html
+++ b/projects/index.html
@@ -33,7 +33,7 @@
     <section id="boxes">
       <div class='container'>
         <div class='box2 grayAnim' onclick="location.href=root+'projects/queens.html'">
-          <img src="/load/img/queens.png"/>
+          <img src="/load/img/queens.PNG"/>
           <h3>Queens Recursive Algorithm</h3>
           <p>On demand technician troubleshooting services.</p>
         </div>
@@ -43,12 +43,12 @@
           <p>On demand technician troubleshooting services.</p>
         </div>
         <div class='box2 grayAnim' onclick="location.href=root+'projects/battleships.html'">
-          <img src="/load/img/battleships.png"/>
+          <img src="/load/img/battleships.PNG"/>
           <h3>Battleships in Swing</h3>
           <p>On demand technician troubleshooting services.</p>
         </div>
         <div class='box2 grayAnim' onclick="location.href=root+'projects/dungeon.html'">
-          <img src="/load/img/dungeon.png"/>
+          <img src="/load/img/dungeon.PNG"/>
           <h3>Card Maze in Swing</h3>
           <p>On demand technician troubleshooting services.</p>
         </div>
