--- a/projects/queens.html
+++ b/projects/queens.html
@@ -66,7 +66,7 @@
         </div>
         <div id='project_side' class='grayAnim'>
           <h3>Queens App</h3>
-          <img src='/load/img/queens.png'>
+          <img src='/load/img/queens.PNG'>
           <ul>
             <li>Java</li>
             <li>Object Oriented Programming</li>
