Added Logic App Project

--- a/load/sidebar.html
+++ b/load/sidebar.html
@@ -6,4 +6,5 @@
   <li id='li_dungeon'><a href='/projects/dungeon.html'>Card Maze in Swing</a></li>
   <li id='li_snake'><a href='/projects/snake.html'>Snake Minigame in Javascript</a></li>
   <li id='li_tree'><a href='/projects/tree.html'>Tree Recursion in Javascript</a></li>
+  <li id='li_logic'><a href='/projects/logic.html'>Discrete Math Logic Algorithm</a></li>
 </ul>
