--- a/projects/index.html
+++ b/projects/index.html
@@ -62,6 +62,11 @@
           <h3>Tree Recursion in Javascript</h3>
           <p>On demand technician troubleshooting services.</p>
         </div>
+        <div class='box2 grayAnim' onclick="location.href=root+'projects/logic.html'">
+          <img src="/load/img/logic.PNG"/>
+          <h3>Discrete Math Logic Algorithm</h3>
+          <p>On demand technician troubleshooting services.</p>
+        </div>
       </div>
     </div>
     </section>
