--- a/projects/logic.html
+++ b/projects/logic.html
@@ -43,7 +43,7 @@
         </div>
         <div id='project_side' class='grayAnim'>
           <h3>2048 Game App</h2>
-          <img src='/load/img/Logic.PNG'>
+          <img src='/load/img/logic.PNG'>
           <ul>
             <li>Java</li>
             <li>Swing Architecture</li>
