Mobile Support Update

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </section>
 
     <div class="container">
-      <section id="boxes">
+      <section class="boxes_wrapper">
         <div class="box">
           <img src="./load/img/software.png" />
           <h3>Software Solutions</h3>
