--- a/projects/index.html
+++ b/projects/index.html
@@ -31,7 +31,7 @@
     </section>
 
     <div class='container'>
-      <section id="boxes">
+      <section class="boxes_wrapper">
         <div class='box2 grayAnim' onclick="location.href=root+'projects/queens.html'">
           <img src="/load/img/queens.PNG"/>
           <h3>Queens Recursive Algorithm</h3>
