--- a/projects/logic.html
+++ b/projects/logic.html
@@ -42,7 +42,7 @@
           <p>Phasellus eget dolor nec velit iaculis molestie. Donec porttitor vitae leo in dignissim. Cras ex ex, condimentum ac tellus in, convallis sollicitudin felis. Nam mi orci, pharetra et erat non, tristique malesuada odio. Cras ornare turpis quis tortor ultrices, a lobortis arcu elementum. Praesent non faucibus erat. Sed malesuada augue eu sapien lacinia dignissim. In scelerisque dui ut magna auctor, non egestas sapien tincidunt. Sed tempus, lorem vitae finibus suscipit, quam est venenatis magna, a mollis ipsum nunc a est. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla id molestie sem. Morbi tincidunt tellus mollis sapien posuere rutrum. Maecenas fermentum, enim ac elementum porttitor, dui arcu posuere augue, in ornare turpis arcu at magna. Sed ut risus gravida, egestas urna et, laoreet purus.</p>
         </div>
         <div id='project_side' class='grayAnim'>
-          <h3>2048 Game App</h2>
+          <h3>Logic App</h2>
           <img src='/load/img/logic.PNG'>
           <ul>
             <li>Java</li>
