Added 2D-platformer project

--- a/load/sidebar.html
+++ b/load/sidebar.html
@@ -2,6 +2,7 @@
 <ul>
   <li id='li_queens'><a href='/projects/queens.html'>Eight Queens Problem</a></li>
   <li id='li_2048'><a href='/projects/2048.html'>2048 Game A.I. Algorithm</a></li>
+  <li id='li_platform'><a href='/projects/platform.html'>2D Platformer on Android</a></li>
   <li id='li_battle'><a href='/projects/battleships.html'>Battleships in Swing</a></li>
   <li id='li_dungeon'><a href='/projects/dungeon.html'>Card Maze in Swing</a></li>
   <li id='li_snake'><a href='/projects/snake.html'>Snake Minigame in Javascript</a></li>
