--- a/projects/index.html
+++ b/projects/index.html
@@ -42,6 +42,11 @@
           <h3>2048 A.I. Algorithm</h3>
           <p>On demand technician troubleshooting services.</p>
         </div>
+        <div class='box2 grayAnim' onclick="location.href=root+'projects/platform.html'">
+          <img src="/load/img/platform.png"/>
+          <h3>2D-Platformer on Android</h3>
+          <p>On demand technician troubleshooting services.</p>
+        </div>
         <div class='box2 grayAnim' onclick="location.href=root+'projects/battleships.html'">
           <img src="/load/img/battleships.PNG"/>
           <h3>Battleships in Swing</h3>
