Update Project-Box2 display

--- a/projects/index.html
+++ b/projects/index.html
@@ -33,44 +33,60 @@
     <div class='container'>
       <section class="boxes_wrapper">
         <div class='box2 grayAnim' onclick="location.href=root+'projects/queens.html'">
-          <img src="/load/img/queens.PNG"/>
-          <h3>Queens Recursive Algorithm</h3>
-          <p>On demand technician troubleshooting services.</p>
+          <div class='box-display'><img src="/load/img/queens.PNG"/></div>
+          <div class='box-description'>
+            <h3>Queens Recursive Algorithm</h3>
+            <p>On demand technician troubleshooting services.</p>
+          </div>
         </div>
         <div class='box2 grayAnim' onclick="location.href=root+'projects/2048.html'">
-          <img src="/load/img/2048.PNG"/ >
-          <h3>2048 A.I. Algorithm</h3>
-          <p>On demand technician troubleshooting services.</p>
+          <div class='box-display'><img src="/load/img/2048.PNG"/></div>
+          <div class='box-description'>
+            <h3>2048 A.I. Algorithm</h3>
+            <p>On demand technician troubleshooting services.</p>
+          </div>
         </div>
         <div class='box2 grayAnim' onclick="location.href=root+'projects/platform.html'">
-          <img src="/load/img/platform.png"/>
-          <h3>2D-Platformer on Android</h3>
-          <p>On demand technician troubleshooting services.</p>
+          <div class='box-display'><img src="/load/img/platform.png"/ class='border'></div>
+          <div class='box-description'>
+            <h3>2D-Platformer on Android</h3>
+            <p>On demand technician troubleshooting services.</p>
+          </div>
         </div>
         <div class='box2 grayAnim' onclick="location.href=root+'projects/battleships.html'">
-          <img src="/load/img/battleships.PNG"/>
-          <h3>Battleships in Swing</h3>
-          <p>On demand technician troubleshooting services.</p>
+          <div class='box-display'><img src="/load/img/battleships.PNG"/></div>
+          <div class='box-description'>
+            <h3>Battleships in Swing</h3>
+            <p>On demand technician troubleshooting services.</p>
+          </div>
         </div>
         <div class='box2 grayAnim' onclick="location.href=root+'projects/dungeon.html'">
-          <img src="/load/img/dungeon.PNG"/>
-          <h3>Card Maze in Swing</h3>
-          <p>On demand technician troubleshooting services.</p>
+          <div class='box-display'><img src="/load/img/dungeon.PNG"/></div>
+          <div class='box-description'>
+            <h3>Card Maze in Swing</h3>
+            <p>On demand technician troubleshooting services.</p>
+          </div>
         </div>
         <div class='box2 grayAnim' onclick="location.href=root+'projects/snake.html'">
-          <img src="/load/img/snake.png"/>
-          <h3>Snake in Javascript</h3>
-          <p>On demand technician troubleshooting services.</p>
+          <div class='box-display'><img src="/load/img/snake.png"/></div>
+          <div class='box-description'>
+            <h3>Snake in Javascript</h3>
+            <p>On demand technician troubleshooting services.</p>
+          </div>
         </div>
         <div class='box2 grayAnim' onclick="location.href=root+'projects/tree.html'">
-          <img src="/load/img/tree.png"/>
-          <h3>Tree Recursion in Javascript</h3>
-          <p>On demand technician troubleshooting services.</p>
+          <div class='box-display'><img src="/load/img/tree.png"/></div>
+          <div class='box-description'>
+            <h3>Tree Recursion in Javascript</h3>
+            <p>On demand technician troubleshooting services.</p>
+          </div>
         </div>
         <div class='box2 grayAnim' onclick="location.href=root+'projects/logic.html'">
-          <img src="/load/img/logic.PNG"/>
-          <h3>Discrete Math Logic Algorithm</h3>
-          <p>On demand technician troubleshooting services.</p>
+          <div class='box-display'><img src="/load/img/logic.PNG"/></div>
+          <div class='box-description'>
+            <h3>Discrete Math Logic Algorithm</h3>
+            <p>On demand technician troubleshooting services.</p>
+          </div>
         </div>
       </section>
     </div>
