--- a/index.html
+++ b/index.html
@@ -17,50 +17,50 @@
   </head>
 
   <body>
+    <main>
+      <header id='main_header'></header>
 
-    <header id='main_header'></header>
-
-    <section id="banner">
-      <div class="container">
-        <h1>Affordable Software Solutions</h1>
-        <p>
-          Computer science is the study of the theory, experimentation, and engineering that form the basis for the design and use of computers. It is the scientific and practical approach to computation and its applications and the systematic study of the feasibility, structure, expression, and mechanization of the methodical procedures (or algorithms) that underlie the acquisition, representation, processing, storage, communication of, and access to, information.
-        </p>
-      </div>
-    </section>
-
-    <section id="news">
-      <div class="container">
-        <h1>Subscribe To Our Newsletter</h1>
-        <form>
-          <input type="email" placeholder="Enter Email..." id="news_email">
-          <button type="submit" class="button_1" id="news_button">Subscribe</button>
-        </form>
-      </div>
-    </section>
-
-    <div class="container">
-      <section class="boxes_wrapper">
-        <div class="box">
-          <img src="./load/img/software.png" />
-          <h3>Software Solutions</h3>
-          <p>Customizable software solutions made to fit specific business needs.</p>
-        </div>
-        <div class="box">
-          <img src="./load/img/website.png" />
-          <h3>Website Development</h3>
-          <p>Professional website developtment and design.</p>
-        </div>
-        <div class="box">
-          <img src="./load/img/troubleshoot.png" />
-          <h3>Troubleshooting</h3>
-          <p>On demand technician troubleshooting services.</p>
+      <section id="banner">
+        <div class="container">
+          <h1>Affordable Software Solutions</h1>
+          <p>
+            Computer science is the study of the theory, experimentation, and engineering that form the basis for the design and use of computers. It is the scientific and practical approach to computation and its applications and the systematic study of the feasibility, structure, expression, and mechanization of the methodical procedures (or algorithms) that underlie the acquisition, representation, processing, storage, communication of, and access to, information.
+          </p>
         </div>
       </section>
-    </div>
 
-    <footer>
-      <p>Riera Web Design, Copyright &copy 2018</p>
-    </footer>
+      <section id="news">
+        <div class="container">
+          <h1>Subscribe To Our Newsletter</h1>
+          <form>
+            <input type="email" placeholder="Enter Email..." id="news_email">
+            <button type="submit" class="button_1" id="news_button">Subscribe</button>
+          </form>
+        </div>
+      </section>
+
+      <div class="container">
+        <section class="boxes_wrapper">
+          <div class="box">
+            <img src="./load/img/software.png" />
+            <h3>Software Solutions</h3>
+            <p>Customizable software solutions made to fit specific business needs.</p>
+          </div>
+          <div class="box">
+            <img src="./load/img/website.png" />
+            <h3>Website Development</h3>
+            <p>Professional website developtment and design.</p>
+          </div>
+          <div class="box">
+            <img src="./load/img/troubleshoot.png" />
+            <h3>Troubleshooting</h3>
+            <p>On demand technician troubleshooting services.</p>
+          </div>
+        </section>
+      </div>
+    </main>
+
+    <footer><p>Riera Web Design, Copyright &copy 2018</p></footer>
+
 
   </body>
