--- a/projects/index.html
+++ b/projects/index.html
@@ -17,6 +17,7 @@
   </head>
 
   <body>
+    <main>
 
     <header id='main_header'></header>
 
@@ -90,10 +91,11 @@
         </div>
       </section>
     </div>
+    </main>
 
-    <footer>
-      <p>Riera Web Design, Copyright &copy 2018</p>
-    </footer>
+      <footer>
+        <p>Riera Web Design, Copyright &copy 2018</p>
+      </footer>
 
   </body>
 </html>
