--- a/projects/snake.html
+++ b/projects/snake.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-
+    <main>
     <header id='main_header'></header>
 
     <section id="news">
@@ -62,7 +62,7 @@
         </div>
       </article>
     </div>
-
+  </main>
     <footer>
       <p>Riera Web Design, Copyright &copy 2018</p>
     </footer>
