--- a/projects/tree.html
+++ b/projects/tree.html
@@ -18,7 +18,7 @@
   </head>
 
   <body onload='loaded()'>
-
+    <main>
     <div id='loading_anim'></div>
 
     <header id='main_header'></header>
@@ -53,7 +53,7 @@
         <p>Cras ut congue ex. Donec sit amet tellus feugiat dolor varius convallis iaculis a sem. Etiam lobortis quis nisl eget tristique. Sed in congue nibh. Nam commodo pharetra porttitor. Maecenas non orci et ligula cursus fermentum sit amet eu tortor. Donec iaculis ligula urna, vitae dapibus nulla sodales vel. Praesent dignissim vitae ipsum sit amet aliquet. Sed et urna turpis. Pellentesque quis lacus augue. Duis placerat pharetra justo quis lobortis. Sed non imperdiet sapien, et dapibus lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
       </div>
     </section>
-
+  </main>
     <footer>
       <p>Riera Web Design, Copyright &copy 2018</p>
     </footer>
