--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-
+    <main>
     <header id='main_header'></header>
 
     <section id="news">
@@ -48,6 +48,7 @@
         </aside>
       </div>
     </div>
+    </main>
 
     <footer>
       <p>Riera Web Design, Copyright &copy 2018</p>
