--- a/projects/2048.html
+++ b/projects/2048.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-
+    <main>
     <header id='main_header'></header>
 
     <section id="news">
@@ -73,7 +73,7 @@
         </div>
       </article>
     </div>
-
+  </main>
     <footer>
       <p>Riera Web Design, Copyright &copy 2018</p>
     </footer>
