--- a/projects/dungeon.html
+++ b/projects/dungeon.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-
+    <main>
     <header id='main_header'></header>
 
     <section id="news">
@@ -59,7 +59,7 @@
           </div>
       </article>
     </div>
-
+  </main>
     <footer>
       <p>Riera Web Design, Copyright &copy 2018</p>
     </footer>
