--- a/projects/queens.html
+++ b/projects/queens.html
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-
+    <main>
     <header id='main_header'></header>
 
     <section id="news">
@@ -83,6 +83,7 @@
         </div>
       </article>
     </div>
+      </main>
     <footer>
       <p>Riera Web Design, Copyright &copy 2018</p>
     </footer>
