Modified text content

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="box">
             <img src="./load/img/website.png" />
             <h3>Website Development</h3>
-            <p>Professional website developtment and design.</p>
+            <p>Professional website development and design.</p>
           </div>
           <div class="box">
             <img src="./load/img/troubleshoot.png" />
