--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <section id="banner">
         <div class="container">
-          <h1>Affordable Software Solutions</h1>
+          <h1>Software Solutions</h1>
           <p>
             Computer science is the study of the theory, experimentation, and engineering that form the basis for the design and use of computers. It is the scientific and practical approach to computation and its applications and the systematic study of the feasibility, structure, expression, and mechanization of the methodical procedures (or algorithms) that underlie the acquisition, representation, processing, storage, communication of, and access to, information.
           </p>
